--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
     "mysql": "^2.18.1",
     "nodemailer": "^6.7.5",
     "uuid": "^8.3.2"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.16"
   }
 }
