--- a/env/.env
+++ b/env/.env
@@ -1,5 +1,6 @@
 PORT=5000
-DB_HOST=localhost
-DB_USER=root
-DB_PASS=
-DB_DATABASE=paytoowin
+DB_HOST="localhost"
+DB_USER="root"
+DB_PASS=""
+DB_DATABASE="paytoowin"
+EMAIL="paytoowin.noreply@gmail.com"
