--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "express": "^4.18.1",
     "express-session": "^1.17.3",
     "jsonwebtoken": "^8.5.1",
-    "mysql": "^2.18.1",
+    "mysql": "github:mysqljs/mysql",
     "nodemailer": "^6.7.5",
     "uuid": "^8.3.2"
   },
