--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "jsonwebtoken": "^8.5.1",
     "mysql": "github:mysqljs/mysql",
     "nodemailer": "^6.7.5",
+    "sweetalert": "^2.1.2",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
